# change index.html plus btn to flag btn when added ✓ # mycafes.html: show as 'nothing in list' if empty ✓ # mypage.html: make favorites func(show in carousel) ✓ # index.html: show as 'not found' with a png when nothing found in radius ✓ # make sqlalchemy save the API results + user added info ✓ # styles.css: add class text-starbucks-black, text-starbucks-black:hover ✓ # index.html: text-starbucks-black:hover to data-location td ✓ # index.html: change map position as Bootstrap modal ✓ # mycafes.html: fix collapse btn ✓

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -109,6 +109,9 @@ a, a:visited {
     background-color: #503C3C;
     border-color: #402C2C;
 }
+.border-starbucks-green {
+    border-color: #016843;
+}
 .icon {
     color: #333;
 }
